# backend/routes/cartRoutes.js
@@ -5,7 +5,7 @@ const { auth } = require("../middlewares/authMiddleware");
 
 router.post("/add", auth, cartController.addToCart);
 router.get("/", auth, cartController.getCart);
-router.put("/update", auth, cartController.updateItemQuantity);
+router.put("/update/:productId", auth, cartController.updateItemQuantity);
 router.delete("/remove/:productId", auth, cartController.removeItemFromCart);
 
 module.exports = router;
